--- a/.drone.yml
+++ b/.drone.yml
@@ -1,14 +1,15 @@
 build:
  image: maven:3.3.3-jdk-8-onbuild
+ pull: true
  commands:
   - git log | head -n 20
   - mvn clean install -Dgpg.skip=true
   - mvn test
 compose:
-  database:
-   image: mysql:5.7
-   environment:
-    - MYSQL_ROOT_PASSWORD: supersecret
-    - MYSQL_DATABASE: drone
-    - MYSQL_USER: drone
-    - MYSQL_PASSWORD: drone
+ database:
+  image: mysql:5.7
+  environment:
+   - MYSQL_ROOT_PASSWORD=tannv
+   - MYSQL_DATABASE: tannv_test
+   - MYSQL_USER: tannv
+   - MYSQL_PASSWORD: tannv
