--- a/.drone.yml
+++ b/.drone.yml
@@ -1,23 +1,23 @@
 build:
- image: maven:3.3.3-jdk-8-onbuild
- pull: true
- environment:
-   - SCALA_VERSION=2.10.6
- commands:
-   - echo $JAVA_HOME
-   - git log | head -n 20
-   - mvn clean install -Dgpg.skip=true
-   - mvn test
+ test:
+    image: maven:3.3.3-jdk-8-onbuild
+    pull: true
+    commands:
+      - echo $JAVA_HOME
+      - mvn test
+ product:
+    image: maven:3.3.3-jdk-8-onbuild
+    commands:
+      - echo $JAVA_HOME
+      - mvn clean install -Dgpg.skip=true
+    when:
+      event: [push, tag]
+services:
+  web:
+      image: tomcat:8.5
+      ports:
+        - "8080:8080"
+      volumes:
+        - ./target/somthingnew.war:/usr/local/tomcat/webapps/ROOT.war
+        - ./target/somthingnew:/usr/local/tomcat/webapps/ROOT
 
-compose:
-  database:
-    image: mysql:5.7
-    environment:
-      - MYSQL_ROOT_PASSWORD = tannv
-      - MYSQL_USER = tannv
-      - MYSQL_PASSWORD = tannv
-  tomcat:
-    image: tomcat
-    environment:
-     - CATALINA_BASE = /usr/local/tomcat
-     - CATALINA_HOME = /usr/local/tomcat
