--- a/.drone.yml
+++ b/.drone.yml
@@ -7,3 +7,6 @@ build:
       - curl --upload-file target/somthingnew.war "http://speeda:speeda@10.0.1.138:8080/manager/deploy?path=/debug&update=true"
     when:
       event: [push, tag]
+cache:
+  directories:
+  - "$HOME/.m2"
