--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,42 @@
+<?xml version="1.0"?>
 <!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>SomethingNew</display-name>
+  <display-name>Attendance Application</display-name>
+
+  <context-param>
+    <param-name>configuration</param-name>
+    <param-value>development</param-value>
+  </context-param>
+
+  <!-- S2Wicket -->
+  <filter>
+    <filter-name>s2wicketfilter</filter-name>
+    <filter-class>org.seasar.wicket.S2WicketFilter</filter-class>
+    <init-param>
+      <param-name>applicationClassName</param-name>
+      <param-value>com.framgia.attendance.web.AttendanceApplication</param-value>
+    </init-param>
+    <init-param>
+      <param-name>debug</param-name>
+      <param-value>/debug</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>s2wicketfilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
   <servlet>
-    <servlet-name>HelloServerlet</servlet-name>
-    <servlet-class>com.tannv.controllers.HelloServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>HelloServerlet</servlet-name>
-    <url-pattern>/hello</url-pattern>
-  </servlet-mapping>
+       <servlet-name>chronosServlet</servlet-name>
+       <servlet-class>org.seasar.chronos.extension.servlet.S2ChronosServlet</servlet-class>
+       <load-on-startup>3</load-on-startup>
+   </servlet>
+
+  <session-config>
+	<session-timeout>180</session-timeout>
+  </session-config> 
+
 </web-app>
