--- a/pom.xml
+++ b/pom.xml
@@ -348,6 +348,28 @@
         </plugins>
 
     </build>
+    <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.20</version>
+        <configuration>
+          <outputDirectory>.framgia-ci-reports</outputDirectory>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>2.1</version>
+        <configuration>
+          <outputDirectory>.framgia-ci-reports</outputDirectory>
+        </configuration>
+      </plugin>
+      
+    </plugins>
+  </reporting>
+  
     <profiles>
         <profile>
             <id>devel</id>
@@ -377,4 +399,5 @@
             </properties>
         </profile>
     </profiles>
+    
 </project>
