--- a/pom.xml
+++ b/pom.xml
@@ -319,7 +319,7 @@
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>2.20</version>
         <configuration>
-          <outputDirectory>.framgia-ci-reports</outputDirectory>
+          <outputDirectory>${basedir}/target/newsite</outputDirectory>
         </configuration>
       </plugin>
       <plugin>
@@ -327,13 +327,11 @@
         <artifactId>maven-site-plugin</artifactId>
         <version>2.1</version>
         <configuration>
-          <outputDirectory>.framgia-ci-reports</outputDirectory>
+          <outputDirectory>${basedir}/target/newsite</outputDirectory>
         </configuration>
       </plugin>
-      
     </plugins>
   </reporting>
-  
     <profiles>
         <profile>
             <id>devel</id>
